--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
+    "json-server": "^0.17.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.0.2",
     "@angular/cli": "^15.0.3",
     "@angular/compiler-cli": "^15.0.0",
+    "@angular/localize": "^15.0.0",
     "@cypress/schematic": "^2.3.0",
     "@types/jasmine": "~4.3.0",
     "cypress": "latest",
