--- a/angular.json
+++ b/angular.json
@@ -2,12 +2,22 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
+  "cli": {
+    "packageManager": "yarn",
+    "analytics": false
+  },
   "projects": {
     "angular15": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "standalone": true,
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "standalone": true,
+          "skipTests": true
         }
       },
       "root": "",
@@ -146,8 +156,6 @@
         }
       }
     }
-  },
-  "cli": {
-    "analytics": "56c1430f-264f-410b-b256-387f33780881"
   }
+
 }
