--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap-icons": "^1.10.2",
     "json-server": "^0.17.1",
     "ngx-bootstrap-modal": "^1.1.0",
+    "ngx-editor": "^15.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
