--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "json-server": "^0.17.1",
     "ngx-bootstrap-modal": "^1.1.0",
     "ngx-editor": "^15.2.0",
+    "@ngneat/transloco": "^4.2.2",
+    "@ngneat/transloco-locale": "^4.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
